--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 function getResult() {
     let roll = document.getElementById("roll").value;
 
-    fetch("http://127.0.0.1:5000/get_result?roll=" + roll)
+    fetch("https://srs-backed.onrender.com/get_result?roll=" + roll)
     .then(response => response.json())
     .then(data => {
         if (data.error) {
